--- a/src/styles/tokens/default.scss
+++ b/src/styles/tokens/default.scss
@@ -1,12 +1,13 @@
 /**
  * Do not edit directly
- * Generated on Sat, 04 Jun 2022 20:36:34 GMT
+ * Generated on Sat, 04 Jun 2022 22:05:46 GMT
  */
 
 :root {
   --token-color-grayscale-950: #1c1c1cff;
   --token-color-grayscale-900: #24282fff;
   --token-color-grayscale-850: #323232ff;
+  --token-color-grayscale-825: #3e3e3eff;
   --token-color-grayscale-800: #3c3e44ff;
   --token-color-grayscale-700: #4a5260ff;
   --token-color-grayscale-650: #939393ff;
