--- a/src/styles/_reboot.scss
+++ b/src/styles/_reboot.scss
@@ -11,11 +11,21 @@ html {
 body {
    margin: 0;
 
-   font-family: "Open Sans", sans-serif;
-
    color: var(--token-color-body);
    background-color: var(--token-background-body);
 
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+   margin: 0 {
+      bottom: 0.5rem;
+   }
 }
