--- a/src/components/molecules/Card/Card.styles.scss
+++ b/src/components/molecules/Card/Card.styles.scss
@@ -29,6 +29,20 @@
       }
    }
 
+   &__episode {
+      position: relative;
+      font: {
+         weight: 600;
+         size: 1.5rem;
+      }
+      color: var(--token-color-primary-base);
+
+      @include break("xs") {
+         top: -1rem;
+         left: -1rem;
+      }
+   }
+
    &__title {
       font: {
          weight: 600;
